--- a/.github/workflows/publish-universal.yml
+++ b/.github/workflows/publish-universal.yml
@@ -192,16 +192,6 @@ jobs:
                   "text": {"type": "mrkdwn", "text": "@channel *Universal SDK* has been released under the tag <https://github.com/applitools/eyes.sdk.javascript1/releases/tag/${{needs.prepare.outputs.tag}}|${{needs.prepare.outputs.tag}}> 🎉 🎊 🥳"}
                 },
                 {
-                  "type": "section",
-                  "text": {"type":"mrkdwn", "text": "Binaries ZIP archive"},
-                  "accessory": {
-                    "type": "button",
-                    "text": {"type": "plain_text", "text": "Download"},
-                    "url": "https://github.com/applitools/eyes.sdk.javascript1/releases/download/${{needs.prepare.outputs.tag}}/eyes-universal.zip"
-                  }
-                },
-                {"type": "divider"},
-                {
                   "type": "header",
                   "text": {"type": "plain_text", "text": "Changelog"}
                 },
@@ -215,28 +205,28 @@ jobs:
                   "elements": [
                     {
                       "type": "button",
-                      "text": {"type": "plain_text", "emoji": true, "text": "Download zip 🗃️"},
-                      "url": "https://github.com/applitools/eyes.sdk.javascript1/releases/download/${{needs.prepare.outputs.tag}}/eyes-universal.zip"
-                    },
-                    {
-                      "type": "button",
-                      "text": {"type": "plain_text", "emoji": true, "text": "Download Mac 🍎"},
+                      "text": {"type": "plain_text", "emoji": true, "text": "Download for Mac 🍎"},
                       "url": "https://github.com/applitools/eyes.sdk.javascript1/releases/download/${{needs.prepare.outputs.tag}}/eyes-universal-macos"
                     },
                     {
                       "type": "button",
-                      "text": {"type": "plain_text", "emoji": true, "text": "Download Linux 🐧"},
+                      "text": {"type": "plain_text", "emoji": true, "text": "Download for Linux 🐧"},
                       "url": "https://github.com/applitools/eyes.sdk.javascript1/releases/download/${{needs.prepare.outputs.tag}}/eyes-universal-linux"
                     },
                     {
                       "type": "button",
-                      "text": {"type": "plain_text", "emoji": true, "text": "Download Windows 🪟"},
+                      "text": {"type": "plain_text", "emoji": true, "text": "Download for Windows 🪟"},
                       "url": "https://github.com/applitools/eyes.sdk.javascript1/releases/download/${{needs.prepare.outputs.tag}}/eyes-universal-win.exe"
                     },
                     {
                       "type": "button",
-                      "text": {"type": "plain_text", "emoji": true, "text": "Download Alpine 🏔️"},
+                      "text": {"type": "plain_text", "emoji": true, "text": "Download for Alpine 🏔️"},
                       "url": "https://github.com/applitools/eyes.sdk.javascript1/releases/download/${{needs.prepare.outputs.tag}}/eyes-universal-alpine"
+                    },
+                    {
+                      "type": "button",
+                      "text": {"type": "plain_text", "emoji": true, "text": "Download archive 🗃️"},
+                      "url": "https://github.com/applitools/eyes.sdk.javascript1/releases/download/${{needs.prepare.outputs.tag}}/eyes-universal.zip"
                     }
                   ]
                 }
