[universal] improve slack notification

--- a/.github/workflows/publish-universal.yml
+++ b/.github/workflows/publish-universal.yml
@@ -186,47 +186,52 @@ jobs:
         with:
           payload: |
             {
-              "blocks": [
+              "attachments": [
                 {
-                  "type":"section",
-                  "text": {"type": "mrkdwn", "text": "@channel *Universal SDK* has been released under the tag <https://github.com/applitools/eyes.sdk.javascript1/releases/tag/${{needs.prepare.outputs.tag}}|${{needs.prepare.outputs.tag}}> 🎉 🎊 🥳"}
-                },
-                {
-                  "type": "header",
-                  "text": {"type": "plain_text", "text": "Changelog"}
-                },
-                {
-                  "type":"section",
-                  "text": {"type": "mrkdwn", "text": ${{toJSON(steps.publish.outputs.changelog)}}}
-                },
-                {"type": "divider"},
-                {
-                  "type": "actions",
-                  "elements": [
+                  "color": "#00a398",
+                  "blocks": [
                     {
-                      "type": "button",
-                      "text": {"type": "plain_text", "emoji": true, "text": "Download for Mac 🍎"},
-                      "url": "https://github.com/applitools/eyes.sdk.javascript1/releases/download/${{needs.prepare.outputs.tag}}/eyes-universal-macos"
+                      "type":"section",
+                      "text": {"type": "mrkdwn", "text": "@channel *Universal SDK* has been released under the tag <https://github.com/applitools/eyes.sdk.javascript1/releases/tag/${{needs.prepare.outputs.tag}}|${{needs.prepare.outputs.tag}}> 🎉 🎊 🥳"}
                     },
                     {
-                      "type": "button",
-                      "text": {"type": "plain_text", "emoji": true, "text": "Download for Linux 🐧"},
-                      "url": "https://github.com/applitools/eyes.sdk.javascript1/releases/download/${{needs.prepare.outputs.tag}}/eyes-universal-linux"
+                      "type": "header",
+                      "text": {"type": "plain_text", "text": "Changelog"}
                     },
                     {
-                      "type": "button",
-                      "text": {"type": "plain_text", "emoji": true, "text": "Download for Windows 🪟"},
-                      "url": "https://github.com/applitools/eyes.sdk.javascript1/releases/download/${{needs.prepare.outputs.tag}}/eyes-universal-win.exe"
+                      "type":"section",
+                      "text": {"type": "mrkdwn", "text": ${{toJSON(steps.publish.outputs.changelog)}}}
                     },
+                    {"type": "divider"},
                     {
-                      "type": "button",
-                      "text": {"type": "plain_text", "emoji": true, "text": "Download for Alpine 🏔️"},
-                      "url": "https://github.com/applitools/eyes.sdk.javascript1/releases/download/${{needs.prepare.outputs.tag}}/eyes-universal-alpine"
-                    },
-                    {
-                      "type": "button",
-                      "text": {"type": "plain_text", "emoji": true, "text": "Download archive 🗃️"},
-                      "url": "https://github.com/applitools/eyes.sdk.javascript1/releases/download/${{needs.prepare.outputs.tag}}/eyes-universal.zip"
+                      "type": "actions",
+                      "elements": [
+                        {
+                          "type": "button",
+                          "text": {"type": "plain_text", "emoji": true, "text": "Download for Mac 🍎"},
+                          "url": "https://github.com/applitools/eyes.sdk.javascript1/releases/download/${{needs.prepare.outputs.tag}}/eyes-universal-macos"
+                        },
+                        {
+                          "type": "button",
+                          "text": {"type": "plain_text", "emoji": true, "text": "Download for Linux 🐧"},
+                          "url": "https://github.com/applitools/eyes.sdk.javascript1/releases/download/${{needs.prepare.outputs.tag}}/eyes-universal-linux"
+                        },
+                        {
+                          "type": "button",
+                          "text": {"type": "plain_text", "emoji": true, "text": "Download for Windows 🪟"},
+                          "url": "https://github.com/applitools/eyes.sdk.javascript1/releases/download/${{needs.prepare.outputs.tag}}/eyes-universal-win.exe"
+                        },
+                        {
+                          "type": "button",
+                          "text": {"type": "plain_text", "emoji": true, "text": "Download for Alpine 🏔️"},
+                          "url": "https://github.com/applitools/eyes.sdk.javascript1/releases/download/${{needs.prepare.outputs.tag}}/eyes-universal-alpine"
+                        },
+                        {
+                          "type": "button",
+                          "text": {"type": "plain_text", "emoji": true, "text": "Download archive 🗃️"},
+                          "url": "https://github.com/applitools/eyes.sdk.javascript1/releases/download/${{needs.prepare.outputs.tag}}/eyes-universal.zip"
+                        }
+                      ]
                     }
                   ]
                 }
