--- a/pending-changes.yaml
+++ b/pending-changes.yaml
@@ -19,45 +19,45 @@ Apollo SDK:
     - Added support for lazy loading views in android native apps
     - Using `lazyLoad.waitingTime` as a delay between stitches by default
   bug-fix:
-    - 
+    - Fixed incorrect calculation of the target element position.
 "@applitools/eyes-webdriverio":
   feature:
     - Don't fail `eyes.open` when there is a failure to set viewport size in `UFG`.
     - Added support for lazy loading views in android native apps
     - Using `lazyLoad.waitingTime` as a delay between stitches by default
   bug-fix:
-    - 
+    - Fixed incorrect calculation of the target element position.
 "@applitools/eyes-playwright":
   feature:
     - Don't fail `eyes.open` when there is a failure to set viewport size in `UFG`.
     - Using `lazyLoad.waitingTime` as a delay between stitches by default
   bug-fix:
-    - 
+    - Fixed incorrect calculation of the target element position.
 "@applitools/eyes-protractor":
   feature:
     - Don't fail `eyes.open` when there is a failure to set viewport size in `UFG`.
     - Added support for lazy loading views in android native apps
     - Using `lazyLoad.waitingTime` as a delay between stitches by default
   bug-fix:
-    - 
+    - Fixed incorrect calculation of the target element position.
 "@applitools/eyes-puppeteer":
   feature:
     - Don't fail `eyes.open` when there is a failure to set viewport size in `UFG`.
     - Using `lazyLoad.waitingTime` as a delay between stitches by default
   bug-fix:
-    - 
+    - Fixed incorrect calculation of the target element position.
 "@applitools/eyes-testcafe":
   feature:
     - Using `lazyLoad.waitingTime` as a delay between stitches by default
   bug-fix:
-    - 
+    - Fixed incorrect calculation of the target element position.
 "@applitools/eyes-nightwatch":
   feature:
     - Don't fail `eyes.open` when there is a failure to set viewport size in `UFG`.
     - Added support for lazy loading views in android native apps
     - Using `lazyLoad.waitingTime` as a delay between stitches by default
   bug-fix:
-    - 
+    - Fixed incorrect calculation of the target element position.
 "@applitools/eyes-cypress":
   feature:
     - Don't fail `eyes.open` when there is a failure to set viewport size in `UFG`.
