--- a/js/packages/core-base/tsconfig.json
+++ b/js/packages/core-base/tsconfig.json
@@ -9,7 +9,7 @@
     "allowJs": true,
 
     "module": "commonjs",
-    "moduleResolution": "Node16",
+    "moduleResolution": "node16",
     "target": "es2019",
     "lib": ["es2019", "es2020.promise", "es2020.bigint", "es2020.string"],
     "preserveConstEnums": true,
