--- a/js/packages/core/package.json
+++ b/js/packages/core/package.json
@@ -57,30 +57,30 @@
     }
   },
   "dependencies": {
-    "@applitools/core-base": "link:../core-base",
-    "@applitools/dom-capture": "11.1.1",
+    "@applitools/core-base": "1.0.0",
+    "@applitools/dom-capture": "11.1.2",
     "@applitools/dom-snapshot": "4.6.2",
-    "@applitools/driver": "1.9.20",
-    "@applitools/logger": "1.1.14",
-    "@applitools/nml-client": "^1.0.3",
-    "@applitools/req": "1.1.1",
-    "@applitools/screenshoter": "3.4.14",
+    "@applitools/driver": "1.9.28",
+    "@applitools/logger": "1.1.20",
+    "@applitools/nml-client": "1.2.0",
+    "@applitools/req": "1.1.4",
+    "@applitools/screenshoter": "3.5.2",
     "@applitools/snippets": "2.4.5",
-    "@applitools/types": "1.5.6",
-    "@applitools/ufg-client": "1.0.0",
-    "@applitools/utils": "1.3.10",
+    "@applitools/types": "1.5.13",
+    "@applitools/ufg-client": "1.0.1",
+    "@applitools/utils": "1.3.12",
     "abort-controller": "3.0.0",
     "throat": "6.0.1"
   },
   "devDependencies": {
-    "@applitools/bongo": "^2.1.6",
+    "@applitools/bongo": "^2.2.0",
     "@applitools/sdk-fake-eyes-server": "^2.1.3",
-    "@applitools/spec-driver-puppeteer": "^1.1.8",
-    "@applitools/spec-driver-selenium": "^1.3.17",
-    "@applitools/test-server": "^1.1.4",
-    "@applitools/test-utils": "^1.4.3",
+    "@applitools/spec-driver-puppeteer": "^1.1.10",
+    "@applitools/spec-driver-selenium": "^1.3.21",
+    "@applitools/test-server": "^1.1.5",
+    "@applitools/test-utils": "^1.5.1",
     "@types/mocha": "^9.1.1",
-    "@types/node": "14",
+    "@types/node": "12",
     "@types/selenium-webdriver": "^4.1.2",
     "@typescript-eslint/eslint-plugin": "^5.38.0",
     "@typescript-eslint/parser": "^5.38.0",
@@ -100,6 +100,6 @@
     "typescript": "^4.8.3"
   },
   "engines": {
-    "node": ">=14.15.0"
+    "node": ">=12.13.0"
   }
 }
