--- a/js/packages/core/tsconfig.json
+++ b/js/packages/core/tsconfig.json
@@ -9,8 +9,8 @@
 
     "module": "commonjs",
     "moduleResolution": "node16",
-    "target": "es2020",
-    "lib": ["es2020", "dom"],
+    "target": "es2019",
+    "lib": ["es2019", "es2020.promise", "es2020.bigint", "es2020.string", "dom"],
     "preserveConstEnums": true,
     "downlevelIteration": true,
     "esModuleInterop": true,
