[api] add xperia 10 ii device

--- a/pending-changes.yaml
+++ b/pending-changes.yaml
@@ -20,6 +20,8 @@ Apollo SDK:
     - Don't fail `eyes.open` when there is a failure to set viewport size in `UFG`.
     - Added support for lazy loading views in android native apps
     - Using `lazyLoad.waitingTime` as a delay between stitches by default
+    - Added `Sony Xperia 10 II` emulation device
+    - Added `iPhone 14`  and `iPhone 14 Pro Max` ios devices
   bug-fix:
     - Fixed incorrect calculation of the target element position.
 "@applitools/eyes-webdriverio":
@@ -27,12 +29,16 @@ Apollo SDK:
     - Don't fail `eyes.open` when there is a failure to set viewport size in `UFG`.
     - Added support for lazy loading views in android native apps
     - Using `lazyLoad.waitingTime` as a delay between stitches by default
+    - Added `Sony Xperia 10 II` emulation device
+    - Added `iPhone 14`  and `iPhone 14 Pro Max` ios devices
   bug-fix:
     - Fixed incorrect calculation of the target element position.
 "@applitools/eyes-playwright":
   feature:
     - Don't fail `eyes.open` when there is a failure to set viewport size in `UFG`.
     - Using `lazyLoad.waitingTime` as a delay between stitches by default
+    - Added `Sony Xperia 10 II` emulation device
+    - Added `iPhone 14`  and `iPhone 14 Pro Max` ios devices
   bug-fix:
     - Fixed incorrect calculation of the target element position.
 "@applitools/eyes-protractor":
@@ -40,17 +46,23 @@ Apollo SDK:
     - Don't fail `eyes.open` when there is a failure to set viewport size in `UFG`.
     - Added support for lazy loading views in android native apps
     - Using `lazyLoad.waitingTime` as a delay between stitches by default
+    - Added `Sony Xperia 10 II` emulation device
+    - Added `iPhone 14`  and `iPhone 14 Pro Max` ios devices
   bug-fix:
     - Fixed incorrect calculation of the target element position.
 "@applitools/eyes-puppeteer":
   feature:
     - Don't fail `eyes.open` when there is a failure to set viewport size in `UFG`.
     - Using `lazyLoad.waitingTime` as a delay between stitches by default
+    - Added `Sony Xperia 10 II` emulation device
+    - Added `iPhone 14`  and `iPhone 14 Pro Max` ios devices
   bug-fix:
     - Fixed incorrect calculation of the target element position.
 "@applitools/eyes-testcafe":
   feature:
     - Using `lazyLoad.waitingTime` as a delay between stitches by default
+    - Added `Sony Xperia 10 II` emulation device
+    - Added `iPhone 14`  and `iPhone 14 Pro Max` ios devices
   bug-fix:
     - Fixed incorrect calculation of the target element position.
 "@applitools/eyes-nightwatch":
@@ -58,6 +70,8 @@ Apollo SDK:
     - Don't fail `eyes.open` when there is a failure to set viewport size in `UFG`.
     - Added support for lazy loading views in android native apps
     - Using `lazyLoad.waitingTime` as a delay between stitches by default
+    - Added `Sony Xperia 10 II` emulation device
+    - Added `iPhone 14`  and `iPhone 14 Pro Max` ios devices
   bug-fix:
     - Fixed incorrect calculation of the target element position.
 "@applitools/eyes-cypress":
