--- a/js/packages/eyes-selenium/package.json
+++ b/js/packages/eyes-selenium/package.json
@@ -65,18 +65,17 @@
     }
   },
   "dependencies": {
-    "@applitools/eyes-api": "1.7.5",
-    "@applitools/eyes-sdk-core": "13.8.19",
-    "@applitools/spec-driver-selenium": "1.3.17",
-    "@applitools/visual-grid-client": "15.13.13"
+    "@applitools/core": "^1.0.1",
+    "@applitools/eyes-api": "1.7.7",
+    "@applitools/spec-driver-selenium": "1.3.22"
   },
   "devDependencies": {
     "@applitools/api-extractor": "1.2.9",
-    "@applitools/bongo": "^2.1.6",
+    "@applitools/bongo": "^2.2.0",
     "@applitools/scripts": "1.1.0",
-    "@applitools/sdk-coverage-tests": "2.3.19",
-    "@applitools/sdk-shared": "0.9.13",
-    "@applitools/test-utils": "1.4.3",
+    "@applitools/sdk-coverage-tests": "2.3.20",
+    "@applitools/sdk-shared": "0.9.14",
+    "@applitools/test-utils": "1.5.1",
     "@types/node": "12",
     "@types/selenium-webdriver": "^4.1.1",
     "@typescript-eslint/eslint-plugin": "^5.27.0",
