--- a/js/packages/eyes-selenium/package.json
+++ b/js/packages/eyes-selenium/package.json
@@ -65,7 +65,7 @@
     }
   },
   "dependencies": {
-    "@applitools/core": "^1.0.1",
+    "@applitools/core": "1.0.1",
     "@applitools/eyes-api": "1.7.7",
     "@applitools/spec-driver-selenium": "1.3.22"
   },
