--- a/js/packages/eyes-puppeteer/package.json
+++ b/js/packages/eyes-puppeteer/package.json
@@ -62,18 +62,17 @@
     }
   },
   "dependencies": {
-    "@applitools/eyes-api": "1.7.4",
-    "@applitools/eyes-sdk-core": "13.8.17",
-    "@applitools/spec-driver-puppeteer": "1.1.8",
-    "@applitools/visual-grid-client": "15.13.11"
+    "@applitools/core": "1.0.3",
+    "@applitools/eyes-api": "1.7.8",
+    "@applitools/spec-driver-puppeteer": "1.1.10"
   },
   "devDependencies": {
     "@applitools/api-extractor": "1.2.9",
-    "@applitools/bongo": "^2.1.6",
+    "@applitools/bongo": "^2.2.0",
     "@applitools/scripts": "1.1.0",
-    "@applitools/sdk-coverage-tests": "2.3.19",
-    "@applitools/sdk-shared": "0.9.13",
-    "@applitools/test-utils": "1.4.3",
+    "@applitools/sdk-coverage-tests": "2.3.20",
+    "@applitools/sdk-shared": "0.9.14",
+    "@applitools/test-utils": "1.5.1",
     "@types/mocha": "^9.1.1",
     "@types/node": "12",
     "@typescript-eslint/eslint-plugin": "^5.27.0",
@@ -86,7 +85,7 @@
     "husky": "^4.3.8",
     "mocha": "^9.2.2",
     "prettier": "^2.6.2",
-    "puppeteer": "^15.5.0",
+    "puppeteer": "^18.0.5",
     "spec-xunit-file": "0.0.1-3",
     "ts-node": "^10.8.0",
     "ttypescript": "^1.5.13",
