--- a/js/packages/eyes-puppeteer/tsconfig.json
+++ b/js/packages/eyes-puppeteer/tsconfig.json
@@ -9,6 +9,7 @@
     "sourceMap": false,
 
     "module": "commonjs",
+    "moduleResolution": "node16",
     "target": "es2019",
     "lib": ["es2019", "es2020.promise", "es2020.bigint", "es2020.string", "dom"],
     "esModuleInterop": true,
@@ -16,7 +17,7 @@
     "downlevelIteration": true,
     "removeComments": true,
     "plugins": [{
-      "transform": "@applitools/api-extractor",
+      "transform": "../api-extractor/dist/transformer.js",
       "afterDeclarations": true,
       "rootFile": "./index.ts",
       "allowModules": ["puppeteer"],
