--- a/js/packages/eyes-playwright/package.json
+++ b/js/packages/eyes-playwright/package.json
@@ -58,10 +58,9 @@
     }
   },
   "dependencies": {
+    "@applitools/core": "^1.0.3",
     "@applitools/eyes-api": "1.7.5",
-    "@applitools/eyes-sdk-core": "13.8.19",
-    "@applitools/spec-driver-playwright": "1.3.3",
-    "@applitools/visual-grid-client": "15.13.13"
+    "@applitools/spec-driver-playwright": "1.3.3"
   },
   "devDependencies": {
     "@applitools/api-extractor": "1.2.9",
