--- a/js/packages/eyes-playwright/package.json
+++ b/js/packages/eyes-playwright/package.json
@@ -58,7 +58,7 @@
     }
   },
   "dependencies": {
-    "@applitools/core": "^1.0.3",
+    "@applitools/core": "1.0.3",
     "@applitools/eyes-api": "1.7.5",
     "@applitools/spec-driver-playwright": "1.3.3"
   },
