--- a/js/packages/eyes-universal/package.json
+++ b/js/packages/eyes-universal/package.json
@@ -50,9 +50,8 @@
     "build:bin": "pkg .",
     "build:zip": "zip -j ./bin/eyes-universal.zip ./bin/eyes-universal-alpine ./bin/eyes-universal-linux ./bin/eyes-universal-macos ./bin/eyes-universal-win.exe",
     "build:tgz": "tar -czf ./bin/eyes-universal.tar.gz -C ./bin ./eyes-universal-alpine ./eyes-universal-linux ./eyes-universal-macos ./eyes-universal-win.exe",
-    "test": "yarn test:unit && yarn test:it && yarn test:e2e",
+    "test": "yarn test:it && yarn test:e2e",
     "test:sanity": "yarn test:unit && yarn test:it",
-    "test:unit": "mocha ./test/unit/*.spec.ts --exit --no-timeouts -r ts-node/register",
     "test:it": "mocha ./test/it/*.spec.ts --no-timeouts -r ts-node/register -r @applitools/test-utils/mocha-hooks/docker",
     "test:e2e": "mocha ./test/e2e/*.spec.ts --exit --no-timeouts -r ts-node/register",
     "setup": "yarn docker:setup",
@@ -70,10 +69,11 @@
     }
   },
   "dependencies": {
-    "@applitools/core": "link:../core",
+    "@applitools/core": "1.0.4",
     "@applitools/execution-grid-client": "1.1.24",
-    "@applitools/logger": "1.1.16",
-    "@applitools/utils": "1.3.10",
+    "@applitools/eyes-sdk-core": "13.10.0",
+    "@applitools/logger": "1.1.22",
+    "@applitools/utils": "1.3.12",
     "proxy-agent": "5.0.0",
     "webdriver": "7.16.11",
     "ws": "7.4.6",
@@ -84,10 +84,10 @@
     "@applitools/eyes-api": "^1.7.5",
     "@applitools/scripts": "^1.1.0",
     "@applitools/sdk-coverage-tests": "^2.3.20",
-    "@applitools/spec-driver-selenium": "^1.3.19",
-    "@applitools/test-server": "^1.1.4",
+    "@applitools/spec-driver-selenium": "^1.3.23",
+    "@applitools/test-server": "^1.1.5",
     "@applitools/test-utils": "^1.5.1",
-    "@applitools/types": "1.5.9",
+    "@applitools/types": "1.5.15",
     "@types/http-proxy": "^1.17.9",
     "@types/mocha": "^9.0.0",
     "@types/node": "12",
