[core-legacy] include src directory to publish entries

--- a/js/packages/eyes-sdk-core/package.json
+++ b/js/packages/eyes-sdk-core/package.json
@@ -46,12 +46,8 @@
     "@applitools/screenshoter": false
   },
   "types": "./index.d.ts",
-  "bin": {
-    "eyes-check-network": "./lib/runCheckNetwork.js"
-  },
   "files": [
-    "bin",
-    "lib",
+    "src",
     "index.js",
     "browser.js",
     "index.d.ts"
