--- a/js/packages/eyes-universal/package.json
+++ b/js/packages/eyes-universal/package.json
@@ -70,8 +70,8 @@
   },
   "dependencies": {
     "@applitools/core": "1.0.4",
-    "@applitools/execution-grid-client": "1.1.24",
-    "@applitools/eyes-sdk-core": "13.10.1",
+    "@applitools/execution-grid-client": "1.1.25",
+    "@applitools/eyes-sdk-core": "13.10.2",
     "@applitools/logger": "1.1.22",
     "@applitools/utils": "1.3.12",
     "proxy-agent": "5.0.0",
@@ -115,12 +115,14 @@
     "scripts": "./dist/cli.js",
     "outputPath": "./bin",
     "targets": [
-      "node14-macos-x64"
+      "node14-alpine-x64",
+      "node14-linux-x64",
+      "node14-macos-x64",
+      "node14-win-x64"
     ],
     "compress": "GZip",
     "assets": [
-      "./node_modules/vm2/lib/setup-sandbox.js",
-      "./node_modules/@applitools/req/node_modules/vm2/lib/setup-sandbox.js"
+      "./node_modules/vm2/lib/setup-sandbox.js"
     ]
   }
 }
