[core-legacy] transform floating regions [universal] add changelog

--- a/pending-changes.yaml
+++ b/pending-changes.yaml
@@ -12,7 +12,8 @@ Apollo SDK:
   feature:
     - 
   bug-fix:
-    - 
+    - Fixed issue with missed offsets when floating region was provided in legacy format
+    - Fixed issue with missed `userTestId` in manager's summary
 "@applitools/eyes-selenium":
   feature:
     - 
