--- a/js/packages/spec-driver-playwright/tsconfig.json
+++ b/js/packages/spec-driver-playwright/tsconfig.json
@@ -9,7 +9,9 @@
     "sourceMap": false,
 
     "module": "commonjs",
-    "target": "es2017",
+    "moduleResolution": "node16",
+    "target": "es2019",
+    "lib": ["es2019", "es2020.promise", "es2020.bigint", "es2020.string", "dom"],
     "esModuleInterop": true,
     "noImplicitAny": true,
     "downlevelIteration": true,
