--- a/pending-changes.yaml
+++ b/pending-changes.yaml
@@ -17,7 +17,7 @@ Apollo SDK:
   feature:
     - 
   bug-fix:
-    - 
+    - Fixed minor issues
 "@applitools/eyes-webdriverio":
   feature:
     - Don't fail `eyes.open` when there is a failure to set viewport size in `UFG`.
@@ -31,7 +31,7 @@ Apollo SDK:
   feature:
     - 
   bug-fix:
-    - 
+    - Fixed minor issues
 "@applitools/eyes-protractor":
   feature:
     - Don't fail `eyes.open` when there is a failure to set viewport size in `UFG`.
@@ -45,7 +45,7 @@ Apollo SDK:
   feature:
     - 
   bug-fix:
-    - 
+    - Fixed minor issues
 "@applitools/eyes-testcafe":
   feature:
     - Using `lazyLoad.waitingTime` as a delay between stitches by default
