Python test fixes to reflect eyes-universal 2.15 changes gh: prevent generated tests parallelism test: skip test_nmg_ios_basic test test: use universal-sdk branch top for generated tests test: expect for userTestId in check result in test_usdk_commands_open_check_close_eyes test: do not assert check result in test_create_open_check_close_vg_eyes

--- a/.github/workflows/py-tests.yaml
+++ b/.github/workflows/py-tests.yaml
@@ -165,6 +165,7 @@ jobs:
     if: ${{ !(github.event_name == 'workflow_dispatch') || inputs.generated_tests }}
     concurrency: sauce_group_1
     strategy:
+      max-parallel: 1
       matrix:
         python-version: [ '3.6', '3.10' ]
     runs-on: ubuntu-latest
