--- a/pending-changes.yaml
+++ b/pending-changes.yaml
@@ -67,7 +67,7 @@ Apollo SDK:
     - Don't fail `eyes.open` when there is a failure to set viewport size in `UFG`.
     - Using `lazyLoad.waitingTime` as a delay between stitches by default
   bug-fix:
-    - 
+    - Internal Infrastructure update
 "@applitools/eyes-storybook":
   feature:
     - 
