--- a/.github/workflows/publish-nightwatch.yml
+++ b/.github/workflows/publish-nightwatch.yml
@@ -69,9 +69,9 @@ jobs:
         run: |
           if [ ${{github.event.inputs.multienv}} = true ]
           then
-            echo "::set-output name=environments::[{\"node-version\":16}, {\"node-version\":14}, {\"node-version\":12}]"
+            echo "::set-output name=environments::[{\"framework-version\":1,\"node-version\":16}, {\"framework-version\":2,\"node-version\":16}, {\"framework-version\":1,\"node-version\":14}, {\"framework-version\":2,\"node-version\":14}, {\"framework-version\":1,\"node-version\":12}, {\"framework-version\":2,\"node-version\":12}]"
           else
-            echo "::set-output name=environments::[{\"node-version\":16}]"
+            echo "::set-output name=environments::[{\"framework-version\":2,\"node-version\":16}]"
           fi
   test:
     needs: [verify]
@@ -82,6 +82,8 @@ jobs:
         include: ${{fromJSON(needs.verify.outputs.environments)}}
     name: 'Test (node: ${{matrix.node-version}})'
     runs-on: ubuntu-latest
+    env:
+      APPLITOOLS_NIGHTWATCH_MAJOR_VERSION: ${{matrix.framework-version}}
     steps:
       - name: Check-out repository
         uses: actions/checkout@v3
