--- a/js/packages/eyes-nightwatch/package.json
+++ b/js/packages/eyes-nightwatch/package.json
@@ -43,7 +43,7 @@
   "scripts": {
     "lint": "eslint '**/*.ts' '**/*.js'",
     "build": "ttsc",
-    "generate:tests": "coverage-tests generate https://raw.githubusercontent.com/applitools/sdk.coverage.tests/universal-sdk/js/config.js --name 'eyes-nightwatch'",
+    "generate:tests": "coverage-tests generate ./test/coverage/config.js --name 'eyes-nightwatch'",
     "test": "yarn test:it && yarn test:e2e && yarn test:coverage",
     "test:sanity": "yarn test:it",
     "test:it": "mocha ./test/it/spec-driver.spec.js --exit --no-timeouts -r @applitools/test-utils/mocha-hooks/docker",
@@ -51,10 +51,11 @@
     "test:e2e:cucumber": "cucumber-js test/e2e/cucumber/features/*.feature --require test/e2e/cucumber/cucumber.config.js --require test/e2e/cucumber/step_definitions",
     "test:e2e:nightwatch": "nightwatch --config test/e2e/nightwatch.conf.js --eyes-config applitools.config.js test/e2e/*.spec.js",
     "test:coverage": "yarn generate:tests && APPLITOOLS_BATCH_NAME='JS Coverage Tests: eyes-nightwatch' APPLITOOLS_BATCH_ID=$(uuidgen) XUNIT_FILE=coverage-test-report.xml mocha --config .mocharc.cvg.js",
-    "report": "coverage-tests report https://raw.githubusercontent.com/applitools/sdk.coverage.tests/master/js/config.js --name 'eyes-nightwatch'",
+    "report": "coverage-tests report ./test/coverage/config.js --name 'eyes-nightwatch'",
     "setup": "yarn docker:setup",
     "docker:setup": "node ../scripts/scripts/generate-docker-compose-config.js && docker-compose up -d",
     "docker:teardown": "docker-compose down",
+    "upgrade:framework": "if [ ! -z $APPLITOOLS_NIGHTWATCH_MAJOR_VERSION ]; then packagejson=`cat package.json`; yarn upgrade --no-lockfile nightwatch@$APPLITOOLS_NIGHTWATCH_MAJOR_VERSION; echo \"$packagejson\" > package.json; fi",
     "deps": "bongo deps",
     "gh:test": "gh workflow run test.yml --ref $(git rev-parse --abbrev-ref HEAD) -f packages='nightwatch' -f links='eyes-sdk-core eyes-api types test-utils utils driver snippets screenshoter sdk-shared visual-grid-client'",
     "gh:publish": "gh workflow run publish-nightwatch.yml --ref $(git rev-parse --abbrev-ref HEAD)",
@@ -68,20 +69,19 @@
     }
   },
   "dependencies": {
-    "@applitools/eyes-api": "1.7.5",
-    "@applitools/eyes-sdk-core": "13.8.19",
-    "@applitools/types": "1.5.8",
-    "@applitools/utils": "1.3.10",
-    "@applitools/visual-grid-client": "15.13.13"
+    "@applitools/core": "1.0.6",
+    "@applitools/eyes-api": "1.7.9",
+    "@applitools/types": "1.5.15",
+    "@applitools/utils": "1.3.12"
   },
   "devDependencies": {
-    "@applitools/api-extractor": "1.2.9",
-    "@applitools/bongo": "^2.1.6",
+    "@applitools/api-extractor": "1.2.11",
+    "@applitools/bongo": "^2.2.0",
     "@applitools/scripts": "1.1.0",
     "@applitools/sdk-coverage-tests": "2.3.20",
-    "@applitools/sdk-shared": "0.9.13",
-    "@applitools/test-utils": "1.4.3",
-    "@types/nightwatch": "^1.3.3",
+    "@applitools/sdk-shared": "0.9.14",
+    "@applitools/test-utils": "1.5.1",
+    "@types/nightwatch": "2.3.6",
     "@types/node": "12",
     "@typescript-eslint/eslint-plugin": "^5.27.0",
     "@typescript-eslint/parser": "^5.27.0",
@@ -95,7 +95,7 @@
     "geckodriver": "^3.0.1",
     "husky": "^4.3.8",
     "mocha": "^10.0.0",
-    "nightwatch": "1.7.13",
+    "nightwatch": "2.3.7",
     "nightwatch-api": "^3.0.2",
     "prettier": "^2.6.2",
     "spec-xunit-file": "0.0.1-3",
