--- a/js/packages/eyes-nightwatch/tsconfig.json
+++ b/js/packages/eyes-nightwatch/tsconfig.json
@@ -9,6 +9,7 @@
     "sourceMap": false,
 
     "module": "commonjs",
+    "moduleResolution": "node16",
     "target": "es2019",
     "lib": ["es2019", "es2020.promise", "es2020.bigint", "es2020.string"],
     "esModuleInterop": true,
