--- a/pending-changes.yaml
+++ b/pending-changes.yaml
@@ -56,10 +56,12 @@ Apollo SDK:
 "@applitools/eyes-nightwatch":
   feature:
     - Don't fail `eyes.open` when there is a failure to set viewport size in `UFG`.
+    - Support Nightwatch major version 2
     - Added support for lazy loading views in android native apps
     - Using `lazyLoad.waitingTime` as a delay between stitches by default
     - Added `Sony Xperia 10 II` emulation device
     - Added `iPhone 14`  and `iPhone 14 Pro Max` ios devices
+    - Support Nightwatch major version 2
   bug-fix:
     - Fixed incorrect calculation of the target element position.
 "@applitools/eyes-cypress":
