--- a/pending-changes.yaml
+++ b/pending-changes.yaml
@@ -11,6 +11,7 @@ Apollo SDK:
 "@applitools/eyes-universal":
   feature:
     - Deprecated "Content" match level value in favor of "IgnoreColors"
+    - Added support for webview switching in classic execution
   bug-fix:
     - 
 "@applitools/eyes-selenium":
@@ -26,6 +27,7 @@ Apollo SDK:
     - Added `Sony Xperia 10 II` emulation device
     - Added `iPhone 14`  and `iPhone 14 Pro Max` ios devices
     - Deprecated "Content" match level value in favor of "IgnoreColors"
+    - Added support for webview switching in classic execution
   bug-fix:
     - Fixed incorrect calculation of the target element position.
 "@applitools/eyes-playwright":
