--- a/js/packages/core/package.json
+++ b/js/packages/core/package.json
@@ -77,6 +77,7 @@
     "@applitools/sdk-fake-eyes-server": "^2.1.3",
     "@applitools/spec-driver-puppeteer": "^1.1.12",
     "@applitools/spec-driver-selenium": "^1.3.24",
+    "@applitools/spec-driver-webdriverio": "^1.3.0",
     "@applitools/test-server": "^1.1.5",
     "@applitools/test-utils": "^1.5.1",
     "@types/mocha": "^9.1.1",
