--- a/js/packages/core/package.json
+++ b/js/packages/core/package.json
@@ -98,7 +98,8 @@
     "puppeteer": "^16.2.0",
     "selenium-webdriver": "^4.4.0",
     "ts-node": "^10.7.0",
-    "typescript": "^4.8.3"
+    "typescript": "^4.8.3",
+    "webdriverio": "^7.25.0"
   },
   "engines": {
     "node": ">=12.13.0"
