--- a/js/packages/core/package.json
+++ b/js/packages/core/package.json
@@ -85,6 +85,7 @@
     "@types/selenium-webdriver": "^4.1.2",
     "@typescript-eslint/eslint-plugin": "^5.38.0",
     "@typescript-eslint/parser": "^5.38.0",
+    "chromedriver": "^106.0.0",
     "eslint": "^8.23.1",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-no-only-tests": "^3.0.0",
