--- a/pending-changes.yaml
+++ b/pending-changes.yaml
@@ -12,22 +12,22 @@ Apollo SDK:
   feature:
     - 
   bug-fix:
-    - 
+    - Fixed the issue with screenshots being taken on chrome-emulated devices
 "@applitools/eyes-selenium":
   feature:
     - Deprecated "Content" match level value in favor of "IgnoreColors"
   bug-fix:
-    - 
+    - Fixed the issue with screenshots being taken on chrome-emulated devices
 "@applitools/eyes-webdriverio":
   feature:
     - 
   bug-fix:
-    - 
+    - Fixed the issue with screenshots being taken on chrome-emulated devices
 "@applitools/eyes-playwright":
   feature:
     - Deprecated "Content" match level value in favor of "IgnoreColors"
   bug-fix:
-    - 
+    - Fixed the issue with screenshots being taken on chrome-emulated devices
 "@applitools/eyes-protractor":
   feature:
     - Don't fail `eyes.open` when there is a failure to set viewport size in `UFG`.
@@ -38,11 +38,12 @@ Apollo SDK:
     - Deprecated "Content" match level value in favor of "IgnoreColors"
   bug-fix:
     - Fixed incorrect calculation of the target element position.
+    - Fixed the issue with screenshots being taken on chrome-emulated devices
 "@applitools/eyes-puppeteer":
   feature:
     - Deprecated "Content" match level value in favor of "IgnoreColors"
   bug-fix:
-    - 
+    - Fixed the issue with screenshots being taken on chrome-emulated devices
 "@applitools/eyes-testcafe":
   feature:
     - Using `lazyLoad.waitingTime` as a delay between stitches by default
@@ -55,7 +56,7 @@ Apollo SDK:
   feature:
     - 
   bug-fix:
-    - 
+    - Fixed the issue with screenshots being taken on chrome-emulated devices
 "@applitools/eyes-cypress":
   feature:
     - Don't fail `eyes.open` when there is a failure to set viewport size in `UFG`.
@@ -108,6 +109,7 @@ Apollo SDK:
     - Avoided unexpected touch actions during `check` on Android apps
     - Better support in DOM slot element
     - Fixed some issues with helper library usage
+    - Fixed the issue with screenshots being taken on chrome-emulated devices
 eyes-browser-extension:
   feature:
     - Don't fail `eyes.open` when there is a failure to set viewport size in `UFG`.
@@ -126,6 +128,7 @@ eyes-browser-extension:
     - |
       Fixed `forceFullPageScreenshot` option behavior
     - Better support in DOM slot element
+    - Fixed the issue with screenshots being taken on chrome-emulated devices
 applitools-for-selenium-ide:
   feature:
     - Don't fail `eyes.open` when there is a failure to set viewport size in `UFG`.
