Add static webview method to CheckSettingsFluent (#1127)
* js api: add static method to CheckSettingsFluent for webview, and add webview to Target type declaration

* js api,types: drop Android version latest-2

* pending-changes: add entry for api change and its impact on wdio

* Update js/packages/eyes-api/src/input/CheckSettings.ts

Co-authored-by: Kyrylo <59825365+kyryloonufriiev@users.noreply.github.com>

Co-authored-by: Kyrylo <59825365+kyryloonufriiev@users.noreply.github.com>

--- a/pending-changes.yaml
+++ b/pending-changes.yaml
@@ -23,6 +23,7 @@ Apollo SDK:
     - 
   bug-fix:
     - Fixed the issue with screenshots being taken on chrome-emulated devices
+    - Fixed issue that prevented Target.webview() from being called
 "@applitools/eyes-playwright":
   feature:
     - Deprecated "Content" match level value in favor of "IgnoreColors"
