--- a/js/packages/eyes-selenium/package.json
+++ b/js/packages/eyes-selenium/package.json
@@ -65,14 +65,14 @@
     }
   },
   "dependencies": {
-    "@applitools/core": "1.0.9",
-    "@applitools/eyes-api": "1.7.10",
-    "@applitools/spec-driver-selenium": "1.3.24"
+    "@applitools/core": "1.1.2",
+    "@applitools/eyes-api": "1.8.2",
+    "@applitools/spec-driver-selenium": "1.4.1"
   },
   "devDependencies": {
     "@applitools/api-extractor": "1.2.11",
     "@applitools/bongo": "^2.2.0",
-    "@applitools/scripts": "1.1.0",
+    "@applitools/scripts": "1.2.0",
     "@applitools/sdk-coverage-tests": "2.3.20",
     "@applitools/sdk-shared": "0.9.14",
     "@applitools/test-utils": "1.5.1",
@@ -89,7 +89,7 @@
     "husky": "^4.3.8",
     "mocha": "^9.2.2",
     "prettier": "^2.6.2",
-    "selenium-webdriver": "^4.2.0",
+    "selenium-webdriver": "4.4.0",
     "spec-xunit-file": "0.0.1-3",
     "ttypescript": "^1.5.13",
     "typescript": "^4.7.2"
