--- a/pending-changes.yaml
+++ b/pending-changes.yaml
@@ -16,6 +16,7 @@ Apollo SDK:
 "@applitools/eyes-selenium":
   feature:
     - Deprecated "Content" match level value in favor of "IgnoreColors"
+    - Added support for webview switching in classic execution
   bug-fix:
     - Fixed the issue with screenshots being taken on chrome-emulated devices
 "@applitools/eyes-webdriverio":
