--- a/js/packages/core/package.json
+++ b/js/packages/core/package.json
@@ -97,7 +97,7 @@
     "png-async": "^0.9.4",
     "prettier": "^2.6.2",
     "puppeteer": "^16.2.0",
-    "selenium-webdriver": "^4.4.0",
+    "selenium-webdriver": "4.4",
     "ts-node": "^10.7.0",
     "typescript": "^4.8.3",
     "webdriverio": "^7.25.0"
