--- a/pending-changes.yaml
+++ b/pending-changes.yaml
@@ -17,17 +17,18 @@ Apollo SDK:
   feature:
     - 
   bug-fix:
-    - 
+    - Fixed wrong signature of `closeBatch` function
 "@applitools/eyes-webdriverio":
   feature:
     - 
   bug-fix:
     - Fixed bug when error was thrown when coded region wasn't found using selector
+    - Fixed wrong signature of `closeBatch` function
 "@applitools/eyes-playwright":
   feature:
     - 
   bug-fix:
-    - 
+    - Fixed wrong signature of `closeBatch` function
 "@applitools/eyes-protractor":
   feature:
     - Don't fail `eyes.open` when there is a failure to set viewport size in `UFG`.
@@ -43,7 +44,7 @@ Apollo SDK:
   feature:
     - 
   bug-fix:
-    - 
+    - Fixed wrong signature of `closeBatch` function
 "@applitools/eyes-testcafe":
   feature:
     - Using `lazyLoad.waitingTime` as a delay between stitches by default
