--- a/pending-changes.yaml
+++ b/pending-changes.yaml
@@ -12,23 +12,26 @@ Apollo SDK:
   feature:
     - 
   bug-fix:
-    - 
+    - Blank missed frames src in ufg
 "@applitools/eyes-selenium":
   feature:
     - 
   bug-fix:
     - Fixed wrong signature of `closeBatch` function
+    - Blank missed frames src in ufg
 "@applitools/eyes-webdriverio":
   feature:
     - 
   bug-fix:
     - Fixed bug when error was thrown when coded region wasn't found using selector
     - Fixed wrong signature of `closeBatch` function
+    - Blank missed frames src in ufg
 "@applitools/eyes-playwright":
   feature:
     - 
   bug-fix:
     - Fixed wrong signature of `closeBatch` function
+    - Blank missed frames src in ufg
 "@applitools/eyes-protractor":
   feature:
     - Don't fail `eyes.open` when there is a failure to set viewport size in `UFG`.
@@ -45,6 +48,7 @@ Apollo SDK:
     - 
   bug-fix:
     - Fixed wrong signature of `closeBatch` function
+    - Blank missed frames src in ufg
 "@applitools/eyes-testcafe":
   feature:
     - Using `lazyLoad.waitingTime` as a delay between stitches by default
@@ -59,6 +63,7 @@ Apollo SDK:
   bug-fix:
     - Fixed the issue with screenshots being taken on chrome-emulated devices
     - Fixed bug when error was thrown when coded region wasn't found using selector
+    - Blank missed frames src in ufg
 "@applitools/eyes-cypress":
   feature:
     - Don't fail `eyes.open` when there is a failure to set viewport size in `UFG`.
