--- a/python/eyes_robotframework/src/EyesLibrary/applitools.yaml
+++ b/python/eyes_robotframework/src/EyesLibrary/applitools.yaml
@@ -1,7 +1,9 @@
 ### applitools.yaml 1.2
 ### START `SHARED SECTION` ###
 #server_url: "https://eyesapi.applitools.com" #optional
-#api_key: YOUR_API_KEY  #Could be specified as APPLITOOLS_API_KEY env variable
+
+#Could be specified as APPLITOOLS_API_KEY env variable
+#api_key: YOUR_API_KEY
 
 #proxy:
 #  url: "http://someproxy-url.com"
@@ -14,7 +16,8 @@
 #  - name: YOUR_PROPERTY_NAME
 #   value: YOUR_PROPERTY_VALUE
 
-#propagate_eyes_test_results: true   #Propagate Eyes results to robot `report.html`
+# Propagate Eyes results to robot `report.html`
+#propagate_eyes_test_results: true
 
 ###### START `AVAILABLE DURING `Eyes Open` CALL SECTION` ######
 app_name: YOUR_APP_NAME
