--- a/js/packages/eyes-cypress/package.json
+++ b/js/packages/eyes-cypress/package.json
@@ -35,7 +35,7 @@
     "test:ts": "yarn test:ts:compile && yarn test:ts:run",
     "test:ts:compile": "tsc --project test/e2e/ts/cypress",
     "test:ts:run": "cypress run --config-file test/e2e/ts/cypress-ts.json",
-    "test:coverage": "yarn generate:tests && cd test/coverage/generic && yarn && unset APPLITOOLS_API_KEY && APPLITOOLS_BATCH_NAME='JS Coverage Tests: eyes-selenium' APPLITOOLS_BATCH_ID=$(uuidgen) npx cypress run",
+    "test:coverage": "yarn generate:tests && cd test/coverage/generic && yarn && unset APPLITOOLS_API_KEY && APPLITOOLS_BATCH_NAME='JS Coverage Tests: eyes-cypress' APPLITOOLS_BATCH_ID=$(uuidgen) npx cypress run",
     "test:e2e": "mkdir -p test/fixtures/testAppCopies && mocha --no-timeouts 'test/e2e/**/*.test.js'",
     "cypress": "cypress open --config-file test/fixtures/cypress-play.json",
     "cypress:new": "cd test/play && yarn && npx cypress open",
@@ -81,7 +81,7 @@
     "chai": "4.2.0",
     "chai-spies": "1.0.0",
     "cookie-parser": "1.4.4",
-    "cypress": "8.0.0",
+    "cypress": "9.0.0",
     "eslint": "8.10.0",
     "eslint-plugin-mocha-no-only": "1.1.0",
     "eslint-plugin-node": "7.0.1",
