--- a/js/packages/core/package.json
+++ b/js/packages/core/package.json
@@ -80,8 +80,10 @@
     "@applitools/spec-driver-webdriverio": "^1.3.1",
     "@applitools/test-server": "^1.1.5",
     "@applitools/test-utils": "^1.5.1",
+    "@types/hoxy": "^3.3.1",
     "@types/mocha": "^9.1.1",
     "@types/node": "12",
+    "@types/pem": "^1.9.6",
     "@types/selenium-webdriver": "^4.1.2",
     "@typescript-eslint/eslint-plugin": "^5.38.0",
     "@typescript-eslint/parser": "^5.38.0",
@@ -91,9 +93,12 @@
     "eslint-plugin-no-only-tests": "^3.0.0",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-prettier": "^4.0.0",
+    "esniffer": "^1.0.1",
+    "hoxy": "^3.3.1",
     "husky": "^4.3.7",
     "mocha": "^10.0.0",
     "nock": "^13.2.8",
+    "pem": "^1.14.6",
     "png-async": "^0.9.4",
     "prettier": "^2.6.2",
     "puppeteer": "^16.2.0",
