--- a/.github/workflows/publish-cypress.yml
+++ b/.github/workflows/publish-cypress.yml
@@ -64,7 +64,7 @@ jobs:
         run: |
           if [ ${{github.event.inputs.multienv}} = true ]
           then
-            echo "::set-output name=environments::[{\"node-version\":16}, {\"node-version\":14}, {\"node-version\":12}]"
+            echo "::set-output name=environments::[{\"node-version\":16}, {\"node-version\":14}]"
           else
             echo "::set-output name=environments::[{\"node-version\":16}]"
           fi
