--- a/pending-changes.yaml
+++ b/pending-changes.yaml
@@ -20,6 +20,7 @@ Apollo SDK:
     - Fixed wrong signature of `closeBatch` function
     - Blank missed frames src in ufg
     - Fix an issue when ufg related requests were not sent through the proxy
+    - Fixed issue with logs not being saved/written
 "@applitools/eyes-webdriverio":
   feature:
     - Applied client's user-agent by default to resource requests in ufg mode
@@ -28,6 +29,7 @@ Apollo SDK:
     - Fixed wrong signature of `closeBatch` function
     - Blank missed frames src in ufg
     - Fix an issue when ufg related requests were not sent through the proxy
+    - Fixed issue with logs not being saved/written
 "@applitools/eyes-playwright":
   feature:
     - Applied client's user-agent by default to resource requests in ufg mode
@@ -35,6 +37,7 @@ Apollo SDK:
     - Fixed wrong signature of `closeBatch` function
     - Blank missed frames src in ufg
     - Fix an issue when ufg related requests were not sent through the proxy
+    - Fixed issue with logs not being saved/written
 "@applitools/eyes-protractor":
   feature:
     - Don't fail `eyes.open` when there is a failure to set viewport size in `UFG`.
@@ -53,6 +56,7 @@ Apollo SDK:
     - Fixed wrong signature of `closeBatch` function
     - Blank missed frames src in ufg
     - Fix an issue when ufg related requests were not sent through the proxy
+    - Fixed issue with logs not being saved/written
 "@applitools/eyes-testcafe":
   feature:
     - Using `lazyLoad.waitingTime` as a delay between stitches by default
@@ -65,7 +69,7 @@ Apollo SDK:
   feature:
     - 
   bug-fix:
-    - 
+    - Fixed issue with logs not being saved/written
 "@applitools/eyes-cypress":
   feature:
     - Don't fail `eyes.open` when there is a failure to set viewport size in `UFG`.
