--- a/js/packages/eyes-cypress/package.json
+++ b/js/packages/eyes-cypress/package.json
@@ -45,7 +45,7 @@
     "render": "run(){ npx cypress run --config integrationFolder=test/fixtures/testApp/cypress/render,pluginsFile=test/fixtures/testApp/cypress/plugins/index-render.js,supportFile=test/fixtures/testApp/cypress/support/index-run.js --env url=$1; }; run",
     "prepublish:setup": "sudo apt-get install xvfb",
     "deps": "bongo deps",
-    "preversion": "yarn build && bongo preversion --skip-deps --verifyPendingChanges",
+    "preversion": "yarn build && bongo preversion --skip-deps --verifyPendingChanges --skipVerifyInstalledVersions",
     "version": "bongo version --withPendingChanges",
     "postversion": "bongo postversion --skip-release-notification"
   },
@@ -55,25 +55,25 @@
     }
   },
   "dependencies": {
-    "@applitools/eyes-api": "1.7.5",
-    "@applitools/eyes-universal": "2.10.3",
+    "@applitools/eyes-api": "1.8.5",
+    "@applitools/eyes-universal": "2.16.3",
     "@applitools/functional-commons": "1.6.0",
-    "@applitools/logger": "1.1.15",
-    "@applitools/visual-grid-client": "15.13.13",
+    "@applitools/logger": "1.1.26",
+    "@applitools/visual-grid-client": "15.14.1",
     "chalk": "3.0.0",
     "semver": "7.3.7",
     "uuid": "8.3.2",
     "ws": "8.5.0"
   },
   "devDependencies": {
-    "@applitools/bongo": "^2.1.6",
-    "@applitools/scripts": "1.1.0",
+    "@applitools/bongo": "^2.2.0",
+    "@applitools/scripts": "1.2.0",
     "@applitools/sdk-coverage-tests": "^2.3.20",
     "@applitools/snaptdout": "1.0.1",
-    "@applitools/test-server": "1.1.4",
-    "@applitools/test-utils": "1.4.3",
-    "@applitools/types": "^1.5.8",
-    "@applitools/utils": "1.3.10",
+    "@applitools/test-server": "1.1.5",
+    "@applitools/test-utils": "1.5.2",
+    "@applitools/types": "^1.5.19",
+    "@applitools/utils": "1.3.12",
     "@types/node": "12",
     "@types/ws": "^8.2.2",
     "@typescript-eslint/eslint-plugin": "^5.10.2",
