--- a/pending-changes.yaml
+++ b/pending-changes.yaml
@@ -12,22 +12,22 @@ Apollo SDK:
   feature:
     - 
   bug-fix:
-    - 
+    - Fixed issue with ufg renders failing intermittently
 "@applitools/eyes-selenium":
   feature:
     - 
   bug-fix:
-    - 
+    - Fixed issue with ufg renders failing intermittently
 "@applitools/eyes-webdriverio":
   feature:
     - 
   bug-fix:
-    - 
+    - Fixed issue with ufg renders failing intermittently
 "@applitools/eyes-playwright":
   feature:
     - 
   bug-fix:
-    - 
+    - Fixed issue with ufg renders failing intermittently
 "@applitools/eyes-protractor":
   feature:
     - Don't fail `eyes.open` when there is a failure to set viewport size in `UFG`.
@@ -43,7 +43,7 @@ Apollo SDK:
   feature:
     - 
   bug-fix:
-    - 
+    - Fixed issue with ufg renders failing intermittently
 "@applitools/eyes-testcafe":
   feature:
     - Using `lazyLoad.waitingTime` as a delay between stitches by default
@@ -57,11 +57,12 @@ Apollo SDK:
     - 
   bug-fix:
     - Fixed issue with logs not being saved/written
+    - Fixed issue with ufg renders failing intermittently
 "@applitools/eyes-cypress":
   feature:
     - 
   bug-fix:
-    - 
+    - Fixed issue with ufg renders failing intermittently
 "@applitools/eyes-storybook":
   feature:
     - Deprecated "Content" match level value in favor of "IgnoreColors"
